--- a/app/src/main/res/layout/activity_enter_user.xml
+++ b/app/src/main/res/layout/activity_enter_user.xml
@@ -1,81 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_rect_base">
+
+
+    <ru.papino.uikit.components.navigation.NavigationComponent
+        android:id="@+id/navigationEnterUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/mainLogoEnterUser"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
+        app:srcCompat="@drawable/main_menu_logo"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="204dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/registrationuser" />
-
-
-    <ImageButton
-        android:id="@+id/buttonEnter"
-        android:layout_width="201dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="104dp"
-        android:background="@drawable/enter_orange"
-        android:onClick="enterUser"
-        android:text="Войти"
-        android:textColor="#fabe62"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="70dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="320dp"/>
+
+    <TextView
+        android:id="@+id/textHelloEnterUser"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:text="Добро пожаловать"
+        android:textColor="@color/white"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/mainLogoEnterUser"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="220dp"
+        android:textStyle="bold"
+        android:textSize="28dp"
+        />
 
     <EditText
         android:id="@+id/enterPhone2"
-        android:layout_width="380dp"
-        android:layout_height="53dp"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Введите номер телефона"
         android:inputType="phone"
-        android:soundEffectsEnabled="false"
-        android:textAlignment="center"
-        android:textColor="#E8DEDE"
-        android:textColorHint="#E8DEDE"
+        app:layout_constraintTop_toBottomOf="@+id/textHelloEnterUser"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.107" />
+        android:layout_marginBottom="240dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray"
+        android:hint="Введите номер телефона"
+        android:textSize="18dp"
+        android:gravity="center"/>
 
     <EditText
         android:id="@+id/enterPassword"
-        android:layout_width="380dp"
-        android:layout_height="53dp"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Введите пароль"
-        android:soundEffectsEnabled="false"
-        android:textAlignment="center"
-        android:textColor="#E8DEDE"
-        android:textColorHint="#E8DEDE"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@+id/enterPhone2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.209" />
+        android:layout_marginBottom="212dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray"
+        android:hint="Введите пароль"
+        android:textSize="18dp"
+        android:gravity="center"/>
 
-    <ImageView
-        android:id="@+id/buttonBackEnterUserMenu"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/shape_sphere"
-        android:src="@drawable/buttonback"
+    <ru.papino.uikit.components.Button
+        android:id="@+id/buttonEnterUser"
+        style="@style/PaPino.Button"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/d_20"
+        android:text="@string/come_in"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginVertical="14dp"
-        android:layout_marginStart="15dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />
+
+    <ru.papino.uikit.components.Button
+        android:id="@+id/buttonRegistration"
+        style="@style/PaPino.ButtonJopaton"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:text="@string/registration"
+        android:layout_marginTop="@dimen/d_6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEnterUser" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
