--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -4,28 +4,4 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="100"
-    android:background="@drawable/il_basket_backgroud">
-
-
-    <TextView
-        android:id="@+id/textViewProfileUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ваш профиль"
-        android:gravity="center"
-        android:textStyle="bold|italic"
-        android:textColor="@color/orange"
-        android:textSize="20sp"
-        />
-
-    <TextView
-        android:id="@+id/textViewProfileBonus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Бонусы"
-        android:gravity="center"
-        android:textStyle="bold|italic"
-        android:textColor="@color/orange"
-        android:textSize="20sp"
-        />
-</LinearLayout>
+    android:background="@drawable/il_basket_backgroud"/>
