--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#f89053</color>
     <color name="yellowDenis">#FFD703</color>
+    <color name="gray">#808080</color>
 </resources>
