--- a/uikit/src/main/res/values-v28/styles.xml
+++ b/uikit/src/main/res/values-v28/styles.xml
@@ -8,4 +8,12 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textFontWeight">600</item>
     </style>
+
+    <style name="PaPino.ButtonJopaton" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/backgroundBottomColor</item>
+        <item name="android:textColor">@color/backgroundCardColor</item>
+        <item name="cornerRadius">@dimen/d_10</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textFontWeight">600</item>
+    </style>
 </resources>
